--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "git://github.com/leepowellcouk/mongoose-validator.git"
   },
   "dependencies": {
-    "validator": "0.4.x"
+    "validator": "git://github.com/nashibao/validator.git"
   },
   "engines": {
     "node": ">=0.2.2"
